worked on the nav bar

--- a/index.html
+++ b/index.html
@@ -5,10 +5,23 @@
     <title>Hello World</title>
     <link rel="stylesheet" href="reset.css">
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   </head>
   <body>
+    <main class="main-container">
+      <nav>
+        <button><i class="fa fa-bars"></i></button>
+        <button><i class="fa fa-search"></i></button>
+        <button><p>SPACE & COSMOS</p></button>
+        <button class="logo"><img src="icons/logo.PNG"></button>
+        <button id="subscribe-button">SUBSCRIBE   NOW</button>
+        <button id="login-button">LOG   IN</button>
+
+      </nav>
     <h1>Hello World</h1>
     <p>This is a web page.</p>
+  </main>
   </body>
 </html>
 
