Add main section content  and styling

--- a/index.html
+++ b/index.html
@@ -1,27 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Hello World</title>
-    <link rel="stylesheet" href="reset.css">
-<link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-  </head>
-  <body>
-    <main class="main-container">
-      <nav>
-        <button><i class="fa fa-bars"></i></button>
-        <button><i class="fa fa-search"></i></button>
-        <button><p>SPACE & COSMOS</p></button>
-        <button class="logo"><img src="icons/logo.PNG"></button>
-        <button id="subscribe-button">SUBSCRIBE   NOW</button>
-        <button id="login-button">LOG   IN</button>
-
-      </nav>
-    <h1>Hello World</h1>
-    <p>This is a web page.</p>
-  </main>
-  </body>
+	<head>
+		<meta charset="utf-8" />
+		<title>New York Times clone</title>
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/style.css" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+		/>
+	</head>
+	<body>
+		<main class="main-container">
+			<!-- Navbar -->
+			<nav>
+				<button><i class="fa fa-bars"></i></button>
+				<button><i class="fa fa-search"></i></button>
+				<button><a>SPACE &amp; COSMOS</a></button>
+				<button class="logo"><img src="images/logo.PNG" alt="logo" /></button>
+				<button id="subscribe-button">SUBSCRIBE NOW</button>
+				<button id="login-button">LOG IN</button>
+			</nav>
+			<!--End Navbar -->
+			<section id="hero">
+				<header>
+					<h1>Space Ripples Reveal Big Bang’s<br />Smoking Gun</h1>
+					<div class="hero">
+						<img src="images/hero-img.jpg" alt="hero image" />
+					</div>
+					<p>
+						Alan Guth was one of the first physicists to hypothesize the
+						existence of inflation, which explains how the universe expanded so
+						uniformly and so quickly in the instant after the Big Bang 13.8
+						billion years ago.Credit...<span class="text-mute"
+							>Rick<br />Friedman for The New York Times</span
+						>
+					</p>
+				</header>
+			</section>
+		</main>
+	</body>
 </html>
-
