reworked on the article icons

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <a href=""><i class="fa fa-twitter fa-fw article-icon"></i></a>
           <a href=""><i class="fa fa-envelope fa-fw article-icon"></i></a>
           <a href=""><i class="fa fa-share fa-fw article-icon"></i></a>
-          <a href=""><i class="fa fa-bookmark fa-2x article-icon-color"></i></a>
+          <a href=""><i class="fa fa-bookmark fa-fw article-icon-color"></i></a>
 
           <a href=""
             ><i class="fa fa-comment fa-2x article-icon-color"
