Add styles to the astronomy section

--- a/index.html
+++ b/index.html
@@ -460,13 +460,19 @@
 			</article>
 			<!-- End of Article 2 -->
 			<section class="thumbnails">
-				<section class="astronomy">
-					<hr />
+				<div class="astronomy">
 					<header>
+						<hr />
 						<h2><a href="#">More in Space and Astronomy</a></h2>
 					</header>
-					<div class="grid">
-						<figure>
+					<div class="grid-container">
+						<div class="grid1"></div>
+						<div class="grid2"></div>
+						<div class="grid3"></div>
+						<div class="grid4"></div>
+						<div class="grid5"></div>
+						<div class="grid6"></div>
+						<!-- <figure>
 							<a href="#"
 								><img src="images/solar-system.jpg" alt="solar system" />
 								<figcaption>
@@ -555,9 +561,9 @@
 									<span>April 7</span>
 								</figcaption></a
 							>
-						</figure>
+						</figure> -->
 					</div>
-				</section>
+				</div>
 				<aside class="most-popular">
 					<hr />
 					<header class="aside-header">
