Refactor the styles of the Astronomy section

--- a/index.html
+++ b/index.html
@@ -471,10 +471,10 @@
                 <a href="#"
                   ><img src="images/solar-system.jpg" alt="solar system" />
                   <figcaption>
-                    <span>Gemini Observatory, via Reuters</span>
+                    <span class="span">Gemini Observatory, via Reuters</span>
                     It Came From Outside Our Solar System and Now It’s Breaking
                     Up
-                    <span>April 7</span>
+                    <span class="art-date">April 7</span>
                   </figcaption></a
                 >
               </figure>
@@ -483,9 +483,9 @@
 				<a href="#"
 					><img src="images/blowtorch.jpg" alt="solar system" />
 					<figcaption>
-						<span>Gemini Observatory, via Reuters</span>
+						<span class="span">Gemini Observatory, via Reuters</span>
 						It Came From Outside Our Solar System and Now It’s Breaking Up
-						<span>April 7</span>
+						<span class="art-date">April 7</span>
 					</figcaption></a
 				>
 			</figure></div>
@@ -493,9 +493,9 @@
 				<a href="#"
 					><img src="images/gabby-jones.jpg" alt="solar system" />
 					<figcaption>
-						<span>Gemini Observatory, via Reuters</span>
+						<span class="span">Gemini Observatory, via Reuters</span>
 						It Came From Outside Our Solar System and Now It’s Breaking Up
-						<span>April 7</span>
+						<span class="art-date">April 7</span>
 					</figcaption></a
 				>
 			</figure></div>
@@ -503,9 +503,9 @@
 				<a href="#"
 					><img src="images/nasa.jpg" alt="solar system" />
 					<figcaption>
-						<span>Gemini Observatory, via Reuters</span>
+						<span class="span">Gemini Observatory, via Reuters</span>
 						It Came From Outside Our Solar System and Now It’s Breaking Up
-						<span>April 7</span>
+						<span class="art-date">April 7</span>
 					</figcaption></a
 				>
 			</figure></div>
@@ -513,18 +513,18 @@
 				<a href="#"
 					><img src="images/space-crime.jpg" alt="solar system" />
 					<figcaption>
-						<span>Gemini Observatory, via Reuters</span>
+						<span class="span">Gemini Observatory, via Reuters</span>
 						It Came From Outside Our Solar System and Now It’s Breaking Up
-						<span>April 7</span>
+						<span class="art-date">April 7</span>
 					</figcaption></a
 				></div>
             <div class="grid-item"><figure>
 				<a href="#"
 					><img src="images/uranus.jpg" alt="solar system" />
 					<figcaption>
-						<span>Gemini Observatory, via Reuters</span>
+						<span class="span">Gemini Observatory, via Reuters</span>
 						It Came From Outside Our Solar System and Now It’s Breaking Up
-						<span>April 7</span>
+						<span class="art-date">April 7</span>
 					</figcaption></a
 				></div>
           </div>
