Add styles to the to the Astronomy section
The section contains editors pick in the article

--- a/index.html
+++ b/index.html
@@ -563,8 +563,48 @@
 						It Came From Outside Our Solar System and Now It’s Breaking Up
 						<span class="art-date">April 7</span>
 					</figcaption></a
-				></div>
+        ></div>
+        
           </div>
+          <header>
+            <hr />
+            <h2><a href="#">Editors’ Picks</a></h2>
+          </header>
+          <div class="grid-container">
+            <div class="grid-item"><figure>
+				<a href="#"
+					><img src="images/map.png" alt="map" />
+					<figcaption>
+						<span class="span">National Archives</span>
+						The Virus Changed the Way We Internet
+
+						<span class="art-date">April 7</span>
+					</figcaption></a
+        ></div>
+            <div class="grid-item"><figure>
+				<a href="#"
+					><img src="images/newyork-times.jpg" alt="solar system" />
+					<figcaption>
+						<span class="span">Gemini Observatory, via Reuters</span>
+					Cities That Went All In on Social Distancing in 1918 Emerged Stronger for It
+April 3
+
+Jake Michaels for The New York Times
+
+						<span class="art-date">April 7</span>
+					</figcaption></a
+        ></div>
+            <div class="grid-item"><figure>
+				<a href="#"
+					><img src="images/house-photo.jpg" alt="solar system" />
+					<figcaption>
+						<span class="span">Gemini Observatory, via Reuters</span>
+						It Came From Outside Our Solar System and Now It’s Breaking Up
+						<span class="art-date">April 7</span>
+					</figcaption></a
+        ></div>
+          </div>
+          
         </div>
         <aside class="most-popular">
           <hr />
