created the footer

--- a/index.html
+++ b/index.html
@@ -658,7 +658,18 @@ Jake Michaels for The New York Times
           </p>
           <hr />
         </aside>
-      </section>
+	  </section>
+	  <footer>
+	 <div> <hr>
+	  <hr>
+	</div>
+	<div class="footer-logo">
+		<img src="images/logo.PNG">
+		<p> <a href="#"> Go to homepage</a> </p>
+		
+	</div>
+	
+</footer>
     </main>
   </body>
 </html>
