added the last footer

--- a/index.html
+++ b/index.html
@@ -781,9 +781,25 @@ Jake Michaels for The New York Times
         <li><a href="#">Help</a></li>
         <li><a href="#">Subscriptions</a></li>
       </ul>
-    </nav>
-		
+	</nav>
+<hr>
+
 	
+<div>
+	<div class="arrow-up"> 
+		
+<p>	<i class="fa fa-arrow-up" aria-hidden="true"></i></p>
+</div> 
+<div class="arrow-paragraph"><p>EXPAND</p></div>
+
+
+   
+
+ 
+ <p class="footer-paragraph">up-to-date information on corona virus is available for free.</p>
+
+		
+	 
 	
 </footer>
     </main>
